--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "gatsby": "2.29.1",
+    "gatsby-plugin-typescript": "^2.10.0",
+    "gatsby-plugin-typescript-checker": "^1.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tsconfig-paths-webpack-plugin": "3.3.0"
