--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,16 @@ public/
 # misc
 .DS_Store
 .env\*
+.env*
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log\*
+
+# IDE env's
+.idea/
+.idea/*
+.vs
+.vscode
+.code-workspace
