--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-typescript": "^2.10.0",
     "gatsby-plugin-typescript-checker": "^1.1.1",
+    "got": "^11.8.1",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "tsconfig-paths-webpack-plugin": "3.3.0"
