--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@gemeente-denhaag/nlds-react-components": "0.1.3",
     "acorn": "^8.0.4",
     "acorn-jsx": "^5.3.1",
     "gatsby": "2.29.1",
     "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-typescript": "^2.10.0",
     "gatsby-plugin-typescript-checker": "^1.1.1",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "tsconfig-paths-webpack-plugin": "3.3.0"
   },
   "devDependencies": {
