--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@gemeente-denhaag/nlds-react-components": "0.1.3",
+    "@material-ui/icons": "^4.11.2",
     "acorn": "^8.0.4",
     "acorn-jsx": "^5.3.1",
     "gatsby": "2.29.1",
