--- a/.eslintrc
+++ b/.eslintrc
@@ -29,6 +29,8 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": ["error"],
     "space-before-function-paren": 0,
     "react/prop-types": 0,
     "react/jsx-handler-names": 0,
