--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "type-check": "tsc",
-    "generate:specs": "npx openapi-typescript https://raw.githubusercontent.com/VNG-Realisatie/zaken-api/master/src/openapi.yaml --output src/types/schema.ts"
+    "generate:specs": "run-s generate:specs:*",
+    "generate:specs:zaak": "npx openapi-typescript https://raw.githubusercontent.com/VNG-Realisatie/zaken-api/master/src/openapi.yaml --output src/types/zaak_schema.ts",
+    "generate:specs:catalogi": "npx openapi-typescript https://raw.githubusercontent.com/VNG-Realisatie/catalogi-api/master/src/openapi.yaml  --output src/types/catalogi_schema.ts"
   },
   "dependencies": {
     "@gemeente-denhaag/denhaag-component-library": "^0.1.9",
@@ -37,6 +39,7 @@
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
     "gatsby-plugin-ts-config": "^1.1.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.2.1",
     "typescript": "4.1.3"
   }
