Feature/issue 17 page header (#27)
* page header added with subcomponents

* fixed module name inconsistency

* reordered components, clarified issues origin

* capitalized first letter of component file

* moved appbar outside of Header, since other components (top nav) will also be in the appbar

* added EN to the language options

* replaced options with menuitems, turned accesibility into a button using mui icons as placeholder

* moved Header to its own folder

* import cleanup

* fix svg import

Co-authored-by: Maarten de Klerk <maarten@deklerk.dev>

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "@gemeente-denhaag/denhaag-component-library": "^0.1.9",
     "acorn": "^8.0.4",
     "acorn-jsx": "^5.3.1",
