--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Municipality of The Hague",
   "license": "MIT",
   "scripts": {
-    "start": "gatsby develop",
+    "start": "gatsby develop --verbose",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -18,29 +18,29 @@
     "@gemeente-denhaag/denhaag-component-library": "^0.1.9",
     "acorn": "^8.0.4",
     "acorn-jsx": "^5.3.1",
-    "gatsby": "2.29.1",
-    "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby": "^3.1.1",
+    "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-material-ui": "^2.1.10",
-    "gatsby-plugin-offline": "^3.8.0",
-    "gatsby-plugin-typescript": "^2.10.0",
+    "gatsby-plugin-offline": "^4.1.0",
+    "gatsby-plugin-typescript": "^3.1.0",
     "gatsby-plugin-typescript-checker": "^1.1.1",
     "got": "^11.8.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "tsconfig-paths-webpack-plugin": "3.3.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "tsconfig-paths-webpack-plugin": "3.5.1"
   },
   "devDependencies": {
-    "@types/node": "14.14.14",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "4.10.0",
-    "@typescript-eslint/parser": "4.10.0",
+    "@types/node": "14.14.35",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.2",
+    "@typescript-eslint/eslint-plugin": "4.18.0",
+    "@typescript-eslint/parser": "4.18.0",
     "babel-plugin-root-import": "6.6.0",
     "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-prettier": "^8.1.0",
     "gatsby-plugin-ts-config": "^1.1.5",
     "npm-run-all": "^4.1.5",
     "prettier": "2.2.1",
-    "typescript": "4.1.3"
+    "typescript": "4.2.3"
   }
 }
