Feature/zaken overview (#48)
* add types

* add basic zaak card component

* add openzaak catalogi types

* add stepper to zaak card

* add basic zaak overview

* add zaak list to display zaak cards

* tried routing, had a breakdown

* add component for active zaken

* add connection to openzaak gateway

* add component to index

* add documentation

* fix url builder

* simplify ZaakCard properties

* remove console.log

* move api call out of ZaakList component

* update text

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ public/
 .DS_Store
 .env\*
 .env*
+!.env.example
 
 # debug
 npm-debug.log*
@@ -31,4 +32,4 @@ yarn-error.log\*
 
 #npm / yarn
 .npmrc
-yarn-error.log
+*.log
