--- a/package.json
+++ b/package.json
@@ -5,34 +5,37 @@
   "author": "Municipality of The Hague",
   "license": "MIT",
   "scripts": {
-    "start": "gatsby develop",
+    "start": "gatsby develop --verbose",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "generate:specs": "run-s generate:specs:*",
+    "generate:specs:zaak": "npx openapi-typescript https://raw.githubusercontent.com/VNG-Realisatie/zaken-api/master/src/openapi.yaml --output src/model/openzaak/zaak_schema.ts",
+    "generate:specs:catalogi": "npx openapi-typescript https://raw.githubusercontent.com/VNG-Realisatie/catalogi-api/master/src/openapi.yaml  --output src/model/openzaak/catalogi_schema.ts"
   },
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
     "@gemeente-denhaag/denhaag-component-library": "^0.1.9",
     "acorn": "^8.0.4",
     "acorn-jsx": "^5.3.1",
-    "gatsby": "2.29.1",
-    "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby": "^3.1.1",
+    "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-material-ui": "^2.1.10",
-    "gatsby-plugin-offline": "^3.8.0",
-    "gatsby-plugin-typescript": "^2.10.0",
+    "gatsby-plugin-offline": "^4.1.0",
+    "gatsby-plugin-typescript": "^3.1.0",
     "gatsby-plugin-typescript-checker": "^1.1.1",
     "got": "^11.8.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "tsconfig-paths-webpack-plugin": "3.3.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "tsconfig-paths-webpack-plugin": "3.5.1"
   },
   "devDependencies": {
-    "@types/node": "14.14.14",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "4.10.0",
-    "@typescript-eslint/parser": "4.10.0",
+    "@types/node": "14.14.35",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.2",
+    "@typescript-eslint/eslint-plugin": "4.18.0",
+    "@typescript-eslint/parser": "4.18.0",
     "babel-plugin-root-import": "6.6.0",
     "eslint": "^7.17.0",
     "eslint-config-prettier": "^7.1.0",
@@ -45,7 +48,8 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
     "gatsby-plugin-ts-config": "^1.1.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.2.1",
-    "typescript": "4.1.3"
+    "typescript": "4.2.3"
   }
 }
